objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Discount_Given__c</fullName>
        <label>Discount Given %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_this_PS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this a Service ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <formula>Text( PricebookEntry.Product2.Product_Group__c )</formula>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Quantity*Sale Price*number of months</description>
        <formula>if( Is_this_PS__c = false, ( of_Months__c * Quantity *  UnitPrice ), Quantity *  UnitPrice)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity*Sale Price*number of months</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <formula>Quantity* PricebookEntry.UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Months__c</fullName>
        <defaultValue>12</defaultValue>
        <label># of Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>